--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="resources/css/styles.css">
     <link rel="stylesheet" href="vendors/css/grid.css">
+    <link rel="stylesheet" href="resources/css/queries.css">
 </head>
 
 <body>
@@ -78,8 +79,14 @@
                     <h3>Pronunciation class</h3>
                     <p class="product-price">19$<span>/month</span></p>
                     <ul>
-                        <li><i class="fas fa-check small-icon"></i>Native voice</li>
-                        <li><i class="fas fa-check small-icon"></i>Master IPA</li>
+                        <li>
+                            <i class="fas fa-check small-icon"></i>
+                            Native voice
+                        </li>
+                        <li>
+                            <i class="fas fa-check small-icon"></i>
+                            Master IPA
+                        </li>
                     </ul>
                     <a href="#" class="btn">JOIN US</a>
                 </div>
@@ -89,8 +96,14 @@
                     <h3>Speaking class</h3>
                     <p class="product-price">25$<span>/month</span></p>
                     <ul>
-                        <li><i class="fas fa-check small-icon"></i>Native speaking</li>
-                        <li><i class="fas fa-check small-icon"></i>Speaking naturally</li>
+                        <li>
+                            <i class="fas fa-check small-icon"></i>
+                            Native speaking
+                        </li>
+                        <li>
+                            <i class="fas fa-check small-icon"></i>
+                            Speaking naturally
+                        </li>
                     </ul>
                     <a href="#" class="btn">JOIN US</a>
                 </div>
@@ -100,8 +113,14 @@
                     <h3>Listening class</h3>
                     <p class="product-price">29$<span>/month</span></p>
                     <ul>
-                        <li><i class="fas fa-check small-icon"></i>Native speech</li>
-                        <li><i class="fas fa-check small-icon"></i>Hearing English clearly</li>
+                        <li>
+                            <i class="fas fa-check small-icon"></i>
+                            Native speech
+                        </li>
+                        <li>
+                            <i class="fas fa-check small-icon"></i>
+                            Hearing English clearly
+                        </li>
                     </ul>
                     <a href="#" class="btn">JOIN US</a>
                 </div>
@@ -194,7 +213,66 @@
             </ul>
         </div>
     </section>
-    
+    <section class="contact-section">
+        <div class="row">
+            <div class="col span-1-of-3">
+                <ul class="infomation">
+                    <li>
+                        <i class="fas fa-map-marker-alt small-icon"></i>
+                        Addres: 21A, Le Lai street, HCM</li>
+                    <li>
+                        <i class="fas fa-envelope small-icon"></i>
+                        Email: selftaught@edu.com</li>
+                    <li>
+                        <i class="fas fa-phone small-icon"></i>
+                        Phone: (+84)099-923-232-320
+                    </li>
+                </ul>
+                <ul class="social-icon">
+                    <li><i class="fab fa-twitter-square "></i></li>
+                    <li><i class="fab fa-facebook-square "></i></li>
+                    <li><i class="fab fa-instagram-square "></i></li>
+                    <li><i class="fab fa-google-plus-square "></i></li>
+                </ul>
+            </div>
+            <div class="col span-2-of-3">
+                <form action="">
+                    <div class="row">
+                        <div class="col span-1-of-3">
+                            <label>Name</label>
+                        </div>
+                        <div class="col span-2-of-3">
+                            <input type="text" placeholder="Your Name">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col span-1-of-3">
+                            <label>Email</label>
+                        </div>
+                        <div class="col span-2-of-3">
+                            <input type="email" placeholder="Your Email">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col span-1-of-3">
+                            <label>Message</label>
+                        </div>
+                        <div class="col span-2-of-3">
+                            <textarea placeholder="Your Message"></textarea>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <input type="submit" class="btn" value="Send It">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>
+            Copyright &copy; 2018 by SELFTAUGHT TEAM
+        </p>
+    </footer>
 </body>
 
 </html>
