--- a/index.html
+++ b/index.html
@@ -285,6 +285,8 @@
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="vendors/js/jquery.waypoints.min.js"></script>
     <script src="resources/js/scripts.js"></script>
+    
+    <h1>hello</h1>
 </body>
 
 </html>
